--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "jest --watch"
+    "test": "jest --watch --runInBand"
   },
   "repository": {
     "type": "git",
